--- a/src/style/base/global.scss
+++ b/src/style/base/global.scss
@@ -1,6 +1,9 @@
 //全局border颜色；
 $Bd_COLOR: #ccc7c6;
 $TEXT_COLO: #878787;
+$TEXT_BLACK: #1b1b1b;
+$TEXT_ORANGE: #f79402;
+$TEXT_666: #666;
 $THEME_COLOR: #129992;
 //伪元素实现1像素边框；
 /*
