--- a/src/style/base/init.scss
+++ b/src/style/base/init.scss
@@ -68,18 +68,15 @@ a:active {
 }
 
 * {
-  outline: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  box-sizing: border-box;
-}
+   outline: none;
+   box-sizing: border-box;
+ }
 
 html {
   -webkit-text-size-adjust: none;
   -ms-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  overflow-y: scroll;
-  background: #fff;
-  font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+  font: 12px/1.5 Microsoft YaHei,tahoma,arial,Hiragino Sans GB,\\5b8b\4f53,sans-serif;
   color: #353535;
   overflow-x: hidden;
 }
