--- a/src/style/router/course.scss
+++ b/src/style/router/course.scss
@@ -280,6 +280,7 @@ html {
             }
           }
           .text {
+            width: 700px;
             float: left;
             margin-left: 20px;
             overflow: hidden;
