--- a/src/style/router/course.scss
+++ b/src/style/router/course.scss
@@ -593,6 +593,7 @@ html {
     }
     .course-presentation {
       margin-top: 20px;
+      margin-bottom: 60px;
       border: 1px solid $Bd_COLOR;
     }
     .presentation-nav {
