--- a/src/style/base/base.scss
+++ b/src/style/base/base.scss
@@ -91,6 +91,10 @@ input[type='checkbox'] {
   padding: 10px 0;
 }
 
+.mt20 {
+  margin-top: 20px !important;
+}
+
 .bdr-top::before {
   @include brdCom(top, #ddd);
 }
