--- a/src/style/router/student.scss
+++ b/src/style/router/student.scss
@@ -277,6 +277,96 @@ html {
           }
         }
       }
+      //我的收藏
+      .user-keep {
+        padding: 0 30px;
+        .keep-item {
+          display: flex;
+          align-items: center;
+          overflow: hidden;
+          padding: 20px 0;
+          border-bottom: 1px dashed $Bd_COLOR;
+        }
+        .item-img {
+          width: 165px;
+          height: 110px;
+          margin-right: 20px;
+          overflow: hidden;
+        }
+        .item-info {
+          flex: 1;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          overflow: hidden;
+          .tit {
+            margin-bottom: 5px;
+            font-size: 16px;
+            color: #1b1b1b;
+          }
+          .down-num {
+            font-size: 14px;
+            color: $TEXT_COLO;
+          }
+          .down-num,
+          .price {
+            display: flex;
+            align-items: center;
+          }
+          .price i{
+            font-family: arial;
+          }
+          .raw {
+            margin-right: 10px;
+            font-size: 18px;
+            color: $TEXT_ORANGE;
+          }
+          .now {
+            font-size: 14px;
+            color: $TEXT_COLO;
+            text-decoration: line-through;
+          }
+          .desc {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            font-size: 14px;
+            color: $TEXT_COLO;
+          }
+          .time-location {
+            height: 30px;
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+            color: $TEXT_COLO;
+            .iconfont {
+              font-size: 16px;
+              color: #ccc7c6;
+            }
+            .time {
+              margin-right: 50px;
+            }
+          }
+        }
+        .item-action {
+          width: 180px;
+          height: 110px;
+          display: flex;
+          justify-content: flex-end;
+          > a {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 62px;
+            height: 24px;
+            border: 1px solid $Bd_COLOR;
+            font-size: 12px;
+            color: $TEXT_COLO;
+          }
+        }
+      }
     }
   }
 }
