--- a/src/style/router/student.scss
+++ b/src/style/router/student.scss
@@ -367,6 +367,83 @@ html {
           }
         }
       }
+      //我的荣誉
+      .user-history {
+        padding: 20px;
+        .history-cont {
+          padding: 20px 0;
+          border-bottom: 1px dashed $Bd_COLOR;
+        }
+        .history-details {
+          padding: 30px;
+          position: relative;
+          &::before {
+            content: ' ';
+            position: absolute;
+            left: 10px;
+            top: 0;
+            height: 100%;
+            width: 2px;
+            background: $Bd_COLOR;
+          }
+        }
+        .history-item {
+          font-size: 14px;
+          .time {
+            position: relative;
+            color: #1b1b1b;
+            &::before {
+              content: ' ';
+              width: 18px;
+              height: 18px;
+              background: #fff;
+              position: absolute;
+              left: -28px;
+              top: 0;
+            }
+            &::after {
+              content: ' ';
+              width: 10px;
+              height: 10px;
+              border-radius: 100%;
+              background: $Bd_COLOR;
+              position: absolute;
+              left: -24px;
+              top: 5px;
+            }
+          }
+          p {
+            color: $TEXT_666;
+          }
+          .img {
+            display: flex;
+            justify-content: center;
+            width: 175px;
+            height: 125px;
+            margin: 15px 0;
+            > img {
+              max-width: 100%;
+            }
+          }
+        }
+        .upload {
+          margin-top: 20px;
+          a {
+            width: 70px;
+            height: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid $TEXT_ORANGE;
+            color: $TEXT_ORANGE;
+            font-size: 14px;
+          }
+          i {
+            margin: 0 3px;
+            font-size: 20px;
+          }
+        }
+      }
     }
   }
 }
