--- a/src/style/router/school-center.scss
+++ b/src/style/router/school-center.scss
@@ -436,6 +436,7 @@ html {
     @at-root .school-board {
       padding: 20px;
       background: #fff;
+      border: 1px solid $Bd_COLOR;
       .upload-img {
         width: 150px;
         height: 150px;
