--- a/src/style/router/student.scss
+++ b/src/style/router/student.scss
@@ -443,6 +443,80 @@ html {
             font-size: 20px;
           }
         }
+        .upload-form {
+        }
+        .form-item {
+          display: flex;
+          margin-top: 20px;
+          .name {
+            width: 100px;
+            height: 36px;
+            line-height: 36px;
+            font-size: 14px;
+            color: $TEXT_666;
+          }
+          .txt,
+          .selected,
+          .time {
+            width: 410px;
+            padding: 5px;
+            outline: none;
+            border: 1px solid $Bd_COLOR;
+            border-radius: 2px;
+            background: transparent;
+            font-size: 14px;
+            color: #1d1d1d;
+          }
+          .selected {
+            width: 190px;
+          }
+          .time {
+            width: 260px;
+          }
+          .text {
+            font-size: 14px;
+            color: $TEXT_666;
+          }
+          .upload {
+            width: 220px;
+            height: 140px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #e8e8e8;
+            position: relative;
+            font-size: 30px;
+            color: #a0a0a0;
+            .file {
+              position: absolute;
+              left: 0;
+              top: 0;
+              width: 100%;
+              height: 100%;
+              opacity: 0;
+              cursor: pointer;
+            }
+          }
+          .btn {
+            width: 150px;
+            height: 36px;
+            margin-right: 20px;
+            outline: none;
+            border: none;
+            border-radius: 2px;
+            background: transparent;
+            cursor: pointer;
+            font-size: 14px;
+            color: #fff;
+            &.save {
+              background: $THEME_COLOR;
+            }
+            &.cancel {
+              border: 1px solid $Bd_COLOR;
+              color: $TEXT_666;
+            }
+          }
+        }
       }
     }
   }
