add cxcalendar component

--- a/src/style/router/student.scss
+++ b/src/style/router/student.scss
@@ -444,6 +444,7 @@ html {
           }
         }
         .upload-form {
+          display: none;
         }
         .form-item {
           display: flex;
