--- a/src/style/base/common.scss
+++ b/src/style/base/common.scss
@@ -10,3 +10,50 @@
     color: #fff;
   }
 }
+
+.__check,
+.__radios {
+  $size: 18px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  input[type=radio],
+  input[type=checkbox] {
+    position: absolute;
+    visibility: hidden;
+    &:checked ~ .__deck {
+      background: #129992;
+      &::before {
+        background: #129992;
+      }
+    }
+    //&:checked ~ .__check_text {
+    //  color: #f7b61e;
+    //}
+  }
+  .__deck {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: $size;
+    height: $size;
+    border-radius: 100%;
+    border: 3px solid #ccc7c6;
+    &::before {
+      content: ' ';
+      display: block;
+      box-sizing: border-box;
+      width: 100%;
+      height: 100%;
+      border: 2px solid #fff;
+      background: transparent;
+      border-radius: 100%;
+    }
+  }
+  .__check_text {
+    margin-left: 5px;
+    font-size: 14px;
+    color: #666;
+  }
+}
