--- a/src/style/router/student.scss
+++ b/src/style/router/student.scss
@@ -157,6 +157,9 @@ html {
             margin-left: 10px;
             margin-right: 20px;
           }
+          .__check {
+            margin-right: 20px;
+          }
           .btn {
             width: 152px;
             height: 36px;
