--- a/src/style/router/student.scss
+++ b/src/style/router/student.scss
@@ -23,6 +23,16 @@ html {
           margin: 5px auto 15px auto;
           overflow: hidden;
           border-radius: 100%;
+          position: relative;
+          .file {
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            cursor: pointer;
+          }
         }
         h3 {
           margin-bottom: 10px;
