--- a/src/style/router/teacher-center.scss
+++ b/src/style/router/teacher-center.scss
@@ -244,7 +244,7 @@ html {
       .bd {
         flex: 1;
         font-size: 12px;
-        color: $TEXT_COLO;
+        color: $TEXT_666;
         text-align: center;
       }
       .ft {
